--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url('./background.png');
-  background-size: 400px 866px;
+  background-size: cover;
 }
 
 code {
